--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   path_provider: ^2.1.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
