--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  uuid: ^4.4.0
   flutter_localizations:
     sdk: flutter
   path_provider: ^2.1.3
