--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.3
   provider: ^6.1.0
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
