--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.1.3
   provider: ^6.1.0
   flutter_slidable: ^3.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
